# multi_map_navigation

./: .gitignore
C++/multi_map_nav/: CMakeLists.txt  package.xml
C++/multi_map_nav/action/: NavigateToMap.action
C++/multi_map_nav/config/: nav2_params.yaml
C++/multi_map_nav/include/multi_map_nav/: navigate_to_map_action_server.hpp
C++/multi_map_nav/launch/: load_map1.launch.py  load_map2.launch.py  sim_full.launch.py  sim_with_nav.launch.py
C++/multi_map_nav/rviz/: sim_config.rviz
C++/multi_map_nav/src/: navigate_to_map_action_server.cpp  navigate_to_map_main.cpp
C++/navigations/: CMakeLists.txt  package.xml
C++/navigations/action/: Navigation.action
C++/navigations/include/navigations/: navigation_server.hpp
nav_ws/src/: README.md
nav_ws/src/anscer_nav/: package.xml  setup.cfg  setup.py
nav_ws/src/anscer_nav/anscer_nav/: map_manager.py  navigation_manager.py  wormhole_manager.py  wormhole_navigator.py
nav_ws/src/anscer_pkgs/: CMakeLists.txt  package.xml
nav_ws/src/anscer_pkgs/action/: NavigateWormhole.action
nav_ws/src/anscer_robotics/: package.xml  setup.cfg  setup.py
nav_ws/src/anscer_robotics/anscer_robotics/: manager.py  map_switcher.py  navigator.py  pose_estimator.py  teleport_gazebo.py  test_navigator_client.py  wormhole_navigator.py
nav_ws/src/anscer_robotics/launch/: multi_map_nav.launch.py
nav_ws/src/anscer_robotics/maps/: map1.pgm  map1.yaml  map2.pgm  map2.yaml
nav_ws/src/multi_map_nav/: CMakeLists.txt
nav_ws/src/multi_map_nav/action/: NavigateToMap.action
nav_ws/src/multi_map_nav/include/multi_map_nav/: navigate_to_map_action_server.hpp
nav_ws/src/multi_map_nav/src/: navigate_to_map_action_server.cpp  navigate_to_map_main.cpp
navigations/action/: NavigateToGoal.action
navigations/src/: navigate_to_goal_server.cpp
