<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>anscer_robotics</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bonnybabukachappilly@gmail.com">bonnybk</maintainer>
  <license>GPL-3.0-only</license>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_simple_commander</depend>
  <depend>nav_msgs</depend>
  <depend>action_msgs</depend>
  <depend>anscer_pkgs</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>ros2launch</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 